Closed Bug 1730977 Opened 4 years ago Closed 4 years ago

Check the existence of requests before calling Stop()

Categories

(Core :: DOM: Navigation, defect, P3)

defect

Tracking

()

RESOLVED FIXED
94 Branch
Fission Milestone MVP
Tracking Status
firefox-esr78 --- disabled
firefox-esr91 --- disabled
firefox92 --- disabled
firefox93 --- wontfix
firefox94 --- fixed

People

(Reporter: smaug, Assigned: smaug)

References

Details

Attachments

(1 file)

The old bfcache implementation calls CanSavePresentation before Stop() call in DocShell, so should the new one. The flag updates to parent side work fine when going back in session history, but not when loading a new page (because of this Stop() call).

This should fix one part of bug 1729545
Patch coming

Summary: Check the existence of requests before calling Stop() for the new page load → Check the existence of requests before calling Stop()
Pushed by opettay@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/ae7324598802 Check the existence of requests before calling Stop(), r=peterv
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 94 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: