Bug 1730977 - Check the existence of requests before calling Stop(), r=peterv

Differential Revision: https://phabricator.services.mozilla.com/D125752